Use Stream.toList()
See gh-36167